# geronimo-captcha

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
benches/: generate_verify.rs
src/: challenge.rs  error.rs  image.rs  image_ops.rs  lib.rs  manager.rs  registry.rs  sprite.rs  utils.rs
tests/: property.rs
