[package]
name = "captcha-lib"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
test-utils = []
parallel = ["dep:rayon"]

[dependencies]
image = "0.25"
imageproc = "0.25"
rand = "0.9"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
dashmap = "6"
ab_glyph = "0.2"
uuid = { version = "1", features = ["v4"] }
subtle = "2"
tracing = "0.1"
once_cell = "1"
zeroize = { version = "1", default-features = true }
rayon = { version = "1", optional = true }
