[package]
name = "geronimo-captcha"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Andrew <zeek@tuta.com>"]
repository = "https://github.com/yoozzeek/geronimo-captcha"
keywords = ["captcha", "security", "web", "random", "no-js"]
description = "Secure, AI-resistant, JavaScript-free CAPTCHA built in Rust. Confuses bots, but delights humans."
documentation = "https://docs.rs/geronimo-captcha"
exclude = ["examples/**", "logo.jpg"]

[lib]
crate-type = ["rlib"]

[features]
test-utils = []
parallel = ["dep:rayon"]

[dependencies]
image = "0.25"
imageproc = "0.25"
webp = "0.3"
thiserror = "2"
rand = "0.9"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
dashmap = "6"
ab_glyph = "0.2"
uuid = { version = "1", features = ["v4"] }
subtle = "2"
tracing = "0.1"
once_cell = "1"
zeroize = { version = "1", default-features = true }
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "captcha"
path = "benches/generate_verify.rs"
harness = false
